--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Banner -->
     <div class="row">
         <div class="banner">
-            <img src="../image/banner.png" alt="banner">
+            <img src="./image/banner.png" alt="banner">
             <h1>Find a place to stay</h1>
             <p>Rent from people in over 34,000 cities and 192 countries</p>
             <div class="line"></div>
@@ -44,17 +44,17 @@
 
         <div class="imgContainer">
             <div class="control col-md-6 col-lg-4">
-                <img src="../image/mexico.png" alt="mexicoCity">
-                <img src="../image/ny.png" alt="newYorkCity">
+                <img src="./image/mexico.png" alt="mexicoCity">
+                <img src="./image/ny.png" alt="newYorkCity">
             </div>
 
             <div class="control col-md-6 col-lg-4">
-                <img src="../image/tokyo.png" alt="tokyoCity">
-                <img src="../image/paris.png" alt="parisCity">
+                <img src="./image/tokyo.png" alt="tokyoCity">
+                <img src="./image/paris.png" alt="parisCity">
             </div>
 
             <div class="control col-md 6 col-lg-4">
-                <img src="../image/invite.png" alt="inviteImg">
+                <img src="./image/invite.png" alt="inviteImg">
             </div>
         </div>
 
